--- a/Quran_Memorizing_System/appsettings.json
+++ b/Quran_Memorizing_System/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=MAZEN\\SQLEXPRESS;Initial Catalog=MemorizationSystem;Integrated Security=True;"
+    "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=MemorizationSystem2;Integrated Security=True"
   },
   "EmailSettings": {
     "SmtpServer": "smtp.gmail.com",
